2010-10-19  Dmitry V. Levin  <ldv@altlinux.org>

	* modules/pam_selinux/Makefile.am (pam_selinux_la_LIBADD): Add
	@LIBAUDIT@.

	* m4/ld-O1.m4 (PAM_LD_O1): Fix typo.

2010-10-19  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_env/pam_env.8.xml: Document side effects of
	environment variables in the stack.
	* modules/pam_exec/pam_exec.8.xml: Document that user can
	have controll over the environment.

2010-10-07  Dmitry V. Levin  <ldv@altlinux.org>

	* modules/pam_selinux/pam_selinux.c (verbose_message): Fix format
	string.

2010-10-04  Dmitry V. Levin  <ldv@altlinux.org>

	* libpam/pam_modutil_priv.c: New file.
	* libpam/Makefile.am (libpam_la_SOURCES): Add it.
	* libpam/include/security/pam_modutil.h (struct pam_modutil_privs,
	PAM_MODUTIL_DEF_PRIVS, pam_modutil_drop_priv,
	pam_modutil_regain_priv): New declarations.
	* libpam/libpam.map (LIBPAM_MODUTIL_1.1.3): New interface.
	* modules/pam_env/pam_env.c (handle_env): Use new pam_modutil interface.
	* modules/pam_mail/pam_mail.c (_do_mail): Likewise.
	* modules/pam_xauth/pam_xauth.c (check_acl, pam_sm_open_session,
	pam_sm_close_session): Likewise.
	(pam_sm_open_session): Remove redundant fchown call.
	Fixes CVE-2010-3430, CVE-2010-3431.

2010-10-01  Thorsten Kukuk  <kukuk@thkukuk.de>

	* configure.in: Extend cross compiling check.
	* doc/specs/Makefile.am: Set CFLAGS and LDFLAGS to BUILD_CFLAGS
	and BUILD_LDFLAGS.
	Bug #3078936 / gentoo #339174

2010-09-30  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_xauth/pam_xauth.c (pam_sm_close_session): Warn if
	unlink() fails.

2010-09-27  Dmitry V. Levin  <ldv@altlinux.org>

	* modules/pam_xauth/pam_xauth.c (pam_sm_close_session): Return
	PAM_SUCCESS immediately if no cookie file is defined.  Return
	PAM_SESSION_ERR if cookie file is defined but target uid cannot be
	determined.  Do not modify cookiefile string returned by pam_get_data.

	* modules/pam_xauth/pam_xauth.c (check_acl): Ensure that the given
	access control file is a regular file.
