@@ -14,8 +14,9 @@ CLEANFILES = *~
 
 M4_FILES = m4/gettext.m4 m4/iconv.m4 m4/intlmacosx.m4 \
 	m4/japhar_grep_cflags.m4 m4/jh_path_xml_catalog.m4 \
-	m4/ld-as-needed.m4 m4/ld-O1.m4 m4/lib-ld.m4 m4/lib-link.m4 \
-	m4/lib-prefix.m4 m4/libprelude.m4 m4/libtool.m4 m4/nls.m4 \
+	m4/ld-as-needed.m4 m4/ld-no-undefined.m4 m4/ld-O1.m4 \
+	m4/lib-ld.m4 m4/lib-link.m4 m4/lib-prefix.m4 \
+	m4/libprelude.m4 m4/libtool.m4 m4/nls.m4 \
 	m4/po.m4 m4/progtest.m4
 
 EXTRA_DIST = config.rpath mkinstalldirs pgp.keys.asc CHANGELOG \
