@@ -84,6 +84,7 @@ AC_PROG_MAKE_SET
 AC_PROG_LIBTOOL
 AM_PROG_CC_C_O
 PAM_LD_AS_NEEDED
+PAM_LD_NO_UNDEFINED
 PAM_LD_O1
 
 dnl Largefile support
